--- a/TeslaWaysApp/src/pages/home/home.html
+++ b/TeslaWaysApp/src/pages/home/home.html
@@ -9,8 +9,12 @@
 
 <ion-content padding>
 
-  <div id="map" style="width: 100%; height: 100%;">
+  <!-- <div id="map" style="width: 100%; height: 100%;">
 
+  </div> -->
+
+  <div id="map_canvas">
+    <!-- <button ion-button (click)="onButtonClick($event)">PocniIgru</button> -->
   </div>
   
 </ion-content>
