--- a/TeslaWaysApp/src/pages/proba/proba.html
+++ b/TeslaWaysApp/src/pages/proba/proba.html
@@ -18,7 +18,7 @@
   <ion-list>
     <ion-item *ngFor="let a of data?.articles">
       <ion-avatar item-start>
-        <img-loader [src]="a?.urlToImg" useImg (load)="onImageLoad($event)"></img-loader>
+        <!-- <img-loader [src]="a?.urlToImg" useImg (load)="onImageLoad($event)"></img-loader> -->
       </ion-avatar>
       <h2>{{ a.title }}</h2>
     </ion-item>
