--- a/TeslaWaysApp/src/pages/home/home.html
+++ b/TeslaWaysApp/src/pages/home/home.html
@@ -9,13 +9,7 @@
 
 <ion-content padding>
 
-  <!-- <div id="map" style="width: 100%; height: 100%;">
-
-  </div> -->
-
-  <div id="map_canvas">
-    <!-- <button ion-button (click)="onButtonClick($event)">PocniIgru</button> -->
-  </div>
+  <button ion-button (click)="startGame()">Zapocni turu</button>
   
 </ion-content>
 
