--- a/TeslaWaysApp/src/pages/home/home.html
+++ b/TeslaWaysApp/src/pages/home/home.html
@@ -3,14 +3,37 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Naslovna strana</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 
-  <button ion-button (click)="startGame()">Zapocni turu</button>
-  
+  <div id="tourDiv">
+    <h1><b>INTERAKTIVNA TURA</b></h1>
+    <ion-card *ngFor="let tour of tours" >
+      <ion-card-header>
+          {{ tour.tourTitle }}
+      </ion-card-header>
+      <ion-card-content>
+          <button ion-button (click)="startGame()">Zapocni turu</button>  
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <br>
+  <div id="newsDiv">
+      <h1><b>NOVOSTI</b></h1>
+      <ion-card *ngFor="let article of helper">
+          <a href="https://www.w3schools.com/w3css/img_lights.jpg">LINK</a>
+           <ion-card-content> 
+              <ion-card-title>{{article?.title}}</ion-card-title>
+              <p>{{article?.description}}</p>
+          </ion-card-content>
+        
+      </ion-card> 
+
+      <a (click)="openNewsPage()" >Jos novosti</a>
+  </div>  
 </ion-content>
 
 <!-- DODAO SAM OVAJ KOMENTAR ZA UPDATE -->
