--- a/TeslaWaysApp/src/pages/display-news/display-news.html
+++ b/TeslaWaysApp/src/pages/display-news/display-news.html
@@ -1,20 +1,12 @@
-<!--
-  Generated template for the DisplayNewsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>displayNews</ion-title>
+    <ion-title>Vesti</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
-    {{description}}
-
+    {{ article }}
 </ion-content>
