--- a/TeslaWaysApp/src/pages/home/home.html
+++ b/TeslaWaysApp/src/pages/home/home.html
@@ -10,7 +10,7 @@
 <ion-content padding>
 
   <div id="tourDiv">
-    <h1><b>INTERAKTIVNA TURA</b></h1>
+    <ion-title>Interaktivna tura</ion-title>
     <ion-card *ngFor="let tour of tours" >
       <ion-card-header>
           {{ tour.tourTitle }}
@@ -22,8 +22,8 @@
   </div>
   <br>
   <div id="newsDiv">
-      <h1><b>NOVOSTI</b></h1>
-      <ion-card *ngFor="let article of helper">
+      <ion-title>Novosti</ion-title>
+      <ion-card *ngFor="let article of helper" (click)="displayArticle(article.content)">
           <a href="https://www.w3schools.com/w3css/img_lights.jpg">LINK</a>
            <ion-card-content> 
               <ion-card-title>{{article?.title}}</ion-card-title>
