--- a/TeslaWaysApp/src/pages/home/home.html
+++ b/TeslaWaysApp/src/pages/home/home.html
@@ -32,6 +32,7 @@
         
       </ion-card> 
 
+      <<button ion-button (click)="setStorage()">set random storage</button>
       <a (click)="openNewsPage()" >Jos novosti</a>
   </div>  
 </ion-content>
