game finished, local storage improved

--- a/TeslaWaysApp/src/pages/game/game.html
+++ b/TeslaWaysApp/src/pages/game/game.html
@@ -14,7 +14,9 @@
 
 
 <ion-content padding>
+  <button ion-button (click)="clearStorage()">Clear local storage</button>
   <div id="map_canvas">
     <!-- <button ion-button (click)="onButtonClick($event)">PocniIgru</button> -->
   </div>
+  
 </ion-content>
