--- a/tesla-ways-app/src/pages/selfie/selfie.html
+++ b/tesla-ways-app/src/pages/selfie/selfie.html
@@ -4,19 +4,17 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>SelfiePage</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-  <canvas id="canvas"></canvas>
-
-  <button ion-button (click)="takePicture()"  id="btnTakePic" >Take selfie</button>
-
-</ion-content>
+<div class="front">
+    <ion-navbar>
+        <ion-title>SelfiePage</ion-title>
+    </ion-navbar>
+  <!-- <ion-content> -->
+    <button ion-button (click)="takePicture()"  id="btnTakePic" >Take selfie</button>
+  
+    <button ion-button (click)="startPreview()"  id="btnStarPreview">Start preview</button>
+  
+    <button ion-button (click)="stopPreview()"  id="btnStopPreview">Stop preview</button>
+  
+    <canvas id="canvas"></canvas>
+    
+  </div>
